--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   },
   "devDependencies": {
     "@types/node": "18.11.9",
+    "ts-node": "10.9.1",
     "typescript": "4.9.3"
   },
   "dependencies": {
-    "@lit-protocol/sdk-nodejs": "1.1.234",
-    "ethers": "5.7.2",
-    "siwe": "2.0.5"
+    "eth-crypto": "2.4.0",
+    "ethers": "5.7.2"
   }
 }
