--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "tsc"
+    "build": "tsc --project ./tsconfig.build.json",
+    "test": "jest"
   },
   "exports": {
     ".": "./lib/index.js",
@@ -17,7 +18,10 @@
     "./resourceId": "./lib/resourceId"
   },
   "devDependencies": {
+    "@types/jest": "29.2.3",
     "@types/node": "18.11.9",
+    "jest": "29.3.1",
+    "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
     "typescript": "4.9.3"
   },
