--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "scripts": {
     "build": "tsc --project ./tsconfig.build.json",
+    "postinstall": "yarn build",
     "test": "jest"
   },
   "exports": {
