--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "./resourceId": "./lib/resourceId"
   },
   "devDependencies": {
-    "@types/jest": "29.2.3",
-    "@types/node": "18.11.9",
     "jest": "29.3.1",
     "ts-jest": "29.0.3",
-    "ts-node": "10.9.1",
-    "typescript": "4.9.3"
+    "ts-node": "10.9.1"
   },
   "dependencies": {
+    "@types/jest": "29.2.3",
+    "@types/node": "18.11.9",
     "eth-crypto": "2.4.0",
-    "ethers": "5.7.2"
+    "ethers": "5.7.2",
+    "typescript": "4.9.3"
   }
 }
